--- a/templates/estudiante/mostrar_estudiante.html.twig
+++ b/templates/estudiante/mostrar_estudiante.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="row mt-2">
     <div class="col ">
-        <h1> Estudiante {{estudiante.nombre}}</h1>
+        <h1> Estudiante {{estudiante.nombre}} {{estudiante.apellido1}} {{estudiante.apellido2}}</h1>
     </div>
 </div>
 <div class="row mt-5">
